<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.view.PostActivity">

    <ImageView
        android:id="@+id/post_image_view_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/placeholderpost"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_sample_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/post_image_view_id"/>

    <TextView
        android:id="@+id/body_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/body_sample_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="17sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/title_id"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/share_post_button_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/share_post_text"
        android:textStyle="normal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>